2005-10-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/Win33Server.m: synchronize defaults so settings are
	not lost.  Tidy a lot of stuff to conform to coding standards.

2005-10-23  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for invalid backend graphics name.
	Error if no X11 libraries if using x11 server.

2005-10-20  Adam Fedor  <fedor@gnu.org>

	* Headers/win32/WIN32Server.h: uint -> unsigned int
	* Source/win32/...: Idem.
	* Source/win32/w32_notifications.m: Comment out unimplmented
	windows method.

2005-10-20 Tom MacSween <macsweent@sympatico.ca>

	* Source/win32/: Fixed a compile error when debug flags were
	activated. Removed detailed documation from MS. Read and
	write correctly from defaults.

2005-09-19  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.1

	* configure.ac: Make art the default graphics module.

2005-09-14  Tom MacSween <macsweent@sympatico.ca>

	* Restructuring of the windows server to handle various
	window and toolbar issues (See Source/win32/RELEASE_NOTES for
	more info).
	* Headers/win32/WIN32Server.h: Added ivars and flags and methods.
	* Headers/winlib/WIN32GState.h: Added method to avoid confliting
	types with superclass.
	* Source/win32/GNUmakefile: Add new files.
	* w32_debug.m, w32_activate.m, w32_create.m, w32_general.m,
	w32_movesize.m, w32_text_focus.m, w32_windowdisplay.m,
	GSDisplayServer_details.m: New files.
	* Source/win32/WIN32Server.m: Large changes. Merged with 
	WIN32ServerEvent. Lots of documentation.

	* Source/winlib/WIN32GState.m: Variable name changes to 
	avoid shadowing.

2005-08-28  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoSurface.h,
	* Source/cairo/CairoSurface.m,
	* Source/cairo/XGCairoGlitzSurface.m,
	* Source/cairo/XGCairoSurface.m,
	* Source/cairo/XGCairoXImageSurface.m,
	* Source/cairo/CairoGState.m (-GSSetDevice:::):
	Rewrote the device handling to work for resized windows.
	* Headers/cairo/CairoFontInfo.h,